--- a/index.html
+++ b/index.html
@@ -70,11 +70,12 @@
       
         <nav id="navbar">
           <ul class="nav-list">
+            <a href="https://www.netmatters.co.uk/bespoke-software">
             <li class="nav-item nav-item--bespoke">
-
               <span class="icon__nav-bar--bespoke"></span><br />
               <small>Bespoke</small><br />
               Software
+            </a>
               <div class="submenu">
                 <ul class="submenu-grid" id="bespoke-software-grid">
                   <h2 style="grid-area: heading">Our Bespoke Software Services</h2>
@@ -93,10 +94,11 @@
                 </ul>
               </div>
             </li>
-            <li class="nav-item">
+            <a href="https://www.netmatters.co.uk/it-support">
+            <li class="nav-item nav-item--it-support">
               <span class="icon__nav-bar--it-support"></span><br />
               <small>IT</small><br />
-              Support
+              Support</a>
               <div class="submenu">
                 <ul class="submenu-grid" id="it-support-grid">
                   <h2 style="grid-area: heading">Our IT Support Services</h2>
@@ -109,30 +111,35 @@
                 </ul>
               </div>
             </li>
-            <li class="nav-item">
+            <a href="https://www.netmatters.co.uk/digital-marketing">
+            <li class="nav-item nav-item--digital-marketing">
               <span class="icon__nav-bar--digital-marketing"></span><br />
               <small>Digital</small><br />
-              Marketing
+              Marketing</a>
             </li>
-            <li class="nav-item">
+            <a href="https://www.netmatters.co.uk/telecoms-services">
+            <li class="nav-item nav-item--telecoms-services">
               <span class="icon__nav-bar--telecoms-services"></span><br />
               <small>Telecoms</small><br />
-              Services
+              Services</a>
             </li>
-            <li class="nav-item">
+            <a href="https://www.netmatters.co.uk/web-design">
+            <li class="nav-item nav-item--web-design">
               <span class="icon__nav-bar--web-design"></span><br />
               <small>Web</small><br />
-              Design
+              Design</a>
             </li>
-            <li class="nav-item">
+            <a href="https://www.netmatters.co.uk/cyber-security">
+            <li class="nav-item nav-item--cyber-security">
               <span class="icon__nav-bar--cyber-security"></span><br />
               <small>Cyber</small><br />
-              Security
+              Security</a>
             </li>
-            <li class="nav-item">
+            <a href="https://www.netmatters.co.uk/train-for-a-career-in-tech">
+            <li class="nav-item nav-item--developer-course">
               <span class="icon__nav-bar--developer-course"></span><br />
               <small>Developer</small><br />
-              Course
+              Course</a>
             </li>
           </ul>
         </nav>
