added icons html and placeholders in css, also moved the grid template areas into the css

--- a/index.html
+++ b/index.html
@@ -29,55 +29,7 @@
   }
 } */
 
-#bespoke-software-grid {
-    grid-template-areas:
-      "heading heading heading heading"
-      "crm mobile-app operational-systems intranet"
-      "automation databases implementation portal"
-      "integrations sharepoint iot reporting";
-  }
 
-  #it-support-grid {
-    grid-template-areas:
-      "heading heading heading"
-      "managed-it business-it office-365"
-      "consultancy cloud backup";
-  }
-
-  #digital-marketing-grid {
-    grid-template-areas:
-    "heading heading heading"
-    "seo ppc cro"
-    "email social-media content";
-}
-
-#telecoms-services-grid {
-    grid-template-areas:
-    "heading heading heading"
-    "business-mobile hosted-voip business-voip"
-    "business-broadband leased-lines 3cx";
-}
-
-#web-design-grid {
-    grid-template-areas:
-    "heading heading heading"
-    "bespoke-website ecommerce-website pay-monthly-websites"
-    "branding-design mobile-app web-hosting";
-}
-
-#cyber-security-grid {
-  grid-template-areas:
-    "heading heading heading"
-    "cyber-security-assessment cyber-security-management cyber-penetration-testing"
-    "cyber-essentials-certification pci-compliance hacking-prevention";
-}
-
-#developer-course-grid {
-  grid-template-areas:
-    "heading heading heading"
-    "train-for-career skills-bootcamp scion-faq"
-    "scion-collaborators scion-collaborators scion-collaborators";
-}
 
 
   </style>
@@ -112,18 +64,18 @@
               <div class="submenu">
                 <ul class="submenu-grid" id="bespoke-software-grid">
                   <h2 style="grid-area: heading">Our Bespoke Software Services</h2>
-                  <li style="grid-area: crm">Bespoke CRM</li>
-                  <li style="grid-area: mobile-app">Mobile App Development</li>
-                  <li style="grid-area: operational-systems">Operational Systems</li>
-                  <li style="grid-area: intranet">Intranet Development</li>
-                  <li style="grid-area: automation">Business Automation</li>
-                  <li style="grid-area: databases">Bespoke Databases</li>
-                  <li style="grid-area: implementation">Business Central Implementation</li>
-                  <li style="grid-area: portal">Customer Portal Development</li>
-                  <li style="grid-area: integrations">Software Integrations</li>
-                  <li style="grid-area: sharepoint">Sharepoint Development</li>
-                  <li style="grid-area: iot">Internet of Things (IoT) Software</li>
-                  <li style="grid-area: reporting">Reporting Hub</li>
+                  <li style="grid-area: crm"><span class="icon__bespoke-software-submenu--crm"></span>Bespoke CRM</li>
+                  <li style="grid-area: mobile-app"><span class="icon__bespoke-software-submenu--mobile-app"></span>Mobile App Development</li>
+                  <li style="grid-area: operational-systems"><span class="icon__bespoke-software-submenu--operational-systems"></span>Operational Systems</li>
+                  <li style="grid-area: intranet"><span class="icon__bespoke-software-submenu--intranet"></span>Intranet Development</li>
+                  <li style="grid-area: automation"><span class="icon__bespoke-software-submenu--automation"></span>Business Automation</li>
+                  <li style="grid-area: databases"><span class="icon__bespoke-software-submenu--databases"></span>Bespoke Databases</li>
+                  <li style="grid-area: implementation"><span class="icon__bespoke-software-submenu--implementation"></span>Business Central Implementation</li>
+                  <li style="grid-area: portal"><span class="icon__bespoke-software-submenu--portal"></span>Customer Portal Development</li>
+                  <li style="grid-area: integrations"><span class="icon__bespoke-software-submenu--integrations"></span>Software Integrations</li>
+                  <li style="grid-area: sharepoint"><span class="icon__bespoke-software-submenu--sharepoint"></span>Sharepoint Development</li>
+                  <li style="grid-area: iot"><span class="icon__bespoke-software-submenu--iot"></span>Internet of Things (IoT) Software</li>
+                  <li style="grid-area: reporting"><span class="icon__bespoke-software-submenu--reporting"></span>Reporting Hub</li>
                 </ul>
               </div>
 
@@ -137,13 +89,13 @@
 
               <div class="submenu">
                 <ul class="submenu-grid" id="it-support-grid">
-                  <h2 style="grid-area: heading">Our IT Support Services</h2>
-                  <li style="grid-area: managed-it">Managed IT Support</li>
-                  <li style="grid-area: business-it">Business IT Support</li>
-                  <li style="grid-area: office-365">Office 365 for Business</li>
-                  <li style="grid-area: consultancy">IT Consultancy</li>
-                  <li style="grid-area: cloud">Cloud Service Provider</li>
-                  <li style="grid-area: backup">Data Backup &amp; Disaster Recovery</li>
+                  <h2 style="grid-area: heading"></span>Our IT Support Services</h2>
+                  <li style="grid-area: managed-it"><span class="icon__it-support-submenu--managed-it"></span>Managed IT Support</li>
+                  <li style="grid-area: business-it"><span class="icon__it-support-submenu--business-it"></span>Business IT Support</li>
+                  <li style="grid-area: office-365"><span class="icon__it-support-submenu--office-365"></span>Office 365 for Business</li>
+                  <li style="grid-area: consultancy"><span class="icon__it-support-submenu--consultancy"></span>IT Consultancy</li>
+                  <li style="grid-area: cloud"><span class="icon__it-support-submenu--cloud"></span>Cloud Service Provider</li>
+                  <li style="grid-area: backup"><span class="icon__it-support-submenu--backup"></span>Data Backup &amp; Disaster Recovery</li>
                 </ul>
               </div>
 
@@ -158,12 +110,12 @@
               <div class="submenu">
                 <ul class="submenu-grid" id="digital-marketing-grid">
                   <h2 style="grid-area: heading">Our Digital Marketing Services</h2>
-                  <li style="grid-area: seo">Search Engine Optimisation (SEO)</li>
-                  <li style="grid-area: ppc">Pay Per Click Advertising (PPC)</li>
-                  <li style="grid-area: cro">Conversion Rate Optimisation (CRO)</li>
-                  <li style="grid-area: email">Email Marketing</li>
-                  <li style="grid-area: social-media">Social Media Marketing</li>
-                  <li style="grid-area: content">Content Marketing</li>
+                  <li style="grid-area: seo"><span class="icon__digital-marketing-submenu--seo"></span>Search Engine Optimisation (SEO)</li>
+                  <li style="grid-area: ppc"><span class="icon__digital-marketing-submenu--ppc"></span>Pay Per Click Advertising (PPC)</li>
+                  <li style="grid-area: cro"><span class="icon__digital-marketing-submenu--cro"></span>Conversion Rate Optimisation (CRO)</li>
+                  <li style="grid-area: email"><span class="icon__digital-marketing-submenu--email"></span>Email Marketing</li>
+                  <li style="grid-area: social-media"><span class="icon__digital-marketing-submenu--social-media"></span>Social Media Marketing</li>
+                  <li style="grid-area: content"><span class="icon__digital-marketing-submenu--content"></span>Content Marketing</li>
                 </ul>
               </div>
 
@@ -178,12 +130,12 @@
               <div class="submenu">
                 <ul class="submenu-grid" id="telecoms-services-grid">
                   <h2 style="grid-area: heading">Our Telecoms Services</h2>
-                  <li style="grid-area: business-mobile">Business Mobile</li>
-                  <li style="grid-area: hosted-voip">Hosted VoIP Provider</li>
-                  <li style="grid-area: business-voip">Business VoIP Systems</li>
-                  <li style="grid-area: business-broadband">Business Broadband</li>
-                  <li style="grid-area: leased-lines">Leased Lines Provider</li>
-                  <li style="grid-area: 3cx">3CX Systems</li>
+                  <li style="grid-area: business-mobile"><span class="icon__telecoms-services-submenu--business-mobile"></span>Business Mobile</li>
+                  <li style="grid-area: hosted-voip"><span class="icon__telecoms-services-submenu--hosted-voip"></span>Hosted VoIP Provider</li>
+                  <li style="grid-area: business-voip"><span class="icon__telecoms-services-submenu--business-voip"></span>Business VoIP Systems</li>
+                  <li style="grid-area: business-broadband"><span class="icon__telecoms-services-submenu--business-broadband"></span>Business Broadband</li>
+                  <li style="grid-area: leased-lines"><span class="icon__telecoms-services-submenu--leased-lines"></span>Leased Lines Provider</li>
+                  <li style="grid-area: 3cx"><span class="icon__telecoms-services-submenu--3cx"></span>3CX Systems</li>
                 </ul>
               </div>
 
@@ -198,12 +150,12 @@
               <div class="submenu">
                 <ul class="submenu-grid" id="web-design-grid">
                   <h2 style="grid-area: heading">Our Web Design Services</h2>
-                  <li style="grid-area: bespoke-website">Bespoke Website Design</li>
-                  <li style="grid-area: ecommerce-website">eCommerce Website Design</li>
-                  <li style="grid-area: pay-monthly-websites">Pay Monthly Websites</li>
-                  <li style="grid-area: branding-design">Branding &amp; Design</li>
-                  <li style="grid-area: mobile-app">Mobile App Development</li>
-                  <li style="grid-area: web-hosting">Web Hosting</li>
+                  <li style="grid-area: bespoke-website"><span class="icon__web-design-submenu--bespoke-website"></span>Bespoke Website Design</li>
+                  <li style="grid-area: ecommerce-website"><span class="icon__web-design-submenu--ecommerce-website"></span>eCommerce Website Design</li>
+                  <li style="grid-area: pay-monthly-websites"><span class="icon__web-design-submenu--pay-monthly-websites"></span>Pay Monthly Websites</li>
+                  <li style="grid-area: branding-design"><span class="icon__web-design-submenu--branding-design"></span>Branding &amp; Design</li>
+                  <li style="grid-area: mobile-app"><span class="icon__web-design-submenu--mobile-app"></span>Mobile App Development</li>
+                  <li style="grid-area: web-hosting"><span class="icon__web-design-submenu--web-hosting"></span>Web Hosting</li>
                 </ul>
               </div>
 
@@ -217,13 +169,13 @@
 
               <div class="submenu">
                 <ul class="submenu-grid" id="cyber-security-grid">
-                  <h2 style="grid-area: heading">Our Cyber Security Services</h2>
-                  <li style="grid-area: cyber-security-assessment">Cyber Security Assessment</li>
-                  <li style="grid-area: cyber-security-management">Cyber Security Management</li>
-                  <li style="grid-area: cyber-penetration-testing">Cyber Penetration Testing</li>
-                  <li style="grid-area: cyber-essentials-certification">Cyber Essentials Certification</li>
-                  <li style="grid-area: pci-compliance">PCI Compliance</li>
-                  <li style="grid-area: hacking-prevention">Hacking Prevention</li>
+                  <h2 style="grid-area: heading"><span class="icon__cyber-security-submenu--heading"></span>Our Cyber Security Services</h2>
+                  <li style="grid-area: assessment"><span class="icon__cyber-security-submenu--assessment"></span>Cyber Security Assessment</li>
+                  <li style="grid-area: management"><span class="icon__cyber-security-submenu--management"></span>Cyber Security Management</li>
+                  <li style="grid-area: penetration-testing"><span class="icon__cyber-security-submenu--penetration-testing"></span>Cyber Penetration Testing</li>
+                  <li style="grid-area: essentials-certification"><span class="icon__cyber-security-submenu--essentials-certification"></span>Cyber Essentials Certification</li>
+                  <li style="grid-area: pci-compliance"><span class="icon__cyber-security-submenu--pci-compliance"></span>PCI Compliance</li>
+                  <li style="grid-area: hacking-prevention"><span class="icon__cyber-security-submenu--hacking-prevention"></span>Hacking Prevention</li>
                 </ul>
               </div>
 
@@ -238,10 +190,10 @@
               <div class="submenu">
                 <ul class="submenu-grid" id="developer-course-grid">
                   <h2 style="grid-area: heading">Our Developer Course Services</h2>
-                  <li style="grid-area: train-for-career">Train For A Career In Tech</li>
-                  <li style="grid-area: skills-bootcamp">Skills Bootcamp</li>
-                  <li style="grid-area: scion-faq">Scion Scheme Frequently Asked Questions</li>
-                  <li style="grid-area: scion-collaborators">Scion Collaborators</li>
+                  <li style="grid-area: train-for-career"><span class="icon__developer-course-submenu--train-for-career"></span>Train For A Career In Tech</li>
+                  <li style="grid-area: skills-bootcamp"><span class="icon__developer-course-submenu--skills-bootcamp"></span>Skills Bootcamp</li>
+                  <li style="grid-area: scion-faq"><span class="icon__developer-course-submenu--scion-faq"></span>Scion Scheme Frequently Asked Questions</li>
+                  <li style="grid-area: scion-collaborators"><span class="icon__developer-course-submenu--scion-collaborators"></span>Scion Collaborators</li>
                 </ul>
               </div>
 
@@ -322,4 +274,5 @@
     
   </div>
 </body>
+
 
