did the hamburger icon, set media breakpoints, submenu and hover arrow now works all the way when resizing

--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
                 </form>
               </div>
 
-              <button class="header-top-buttons" id="header-nav-button"><span class="icon__header-top--nav"></span></button>
+              <button class="header-top-buttons" id="header-nav-button">
+                <!-- <span class="icon__header-top--nav"></span> -->
+                <span class="hamburger-icon"></span>
+              </button>
             </div>
           </div>
 
