been working on services, think i got the first panel working, also got a mixin for colors

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
               <!-- End Hamburger Menu -->
             </div>
           </div>
+          <!-- End of id header-top -->
 
           <!-- XSmall search bar -->
           <div>
@@ -382,6 +383,42 @@
           </nav>
         </header>
       </div>
+      <!-- End of id header div -->
+
+      <div id="banner">
+        <img src="assets/images/home-YLei.webp" />
+      </div>
+      <!-- End of banner div -->
+      <div id="middle-container">
+        <!-- Start of middle-container div -->
+        <div id="services-container">
+          <div id="extra-div">
+            <div id="services-section">
+              <div id="services-row">
+                <div id="services-h2"></div>
+                <div class="flex flex__services">
+                  <a href="https://www.netmatters.co.uk/bespoke-software" class="services-panel services-panel__bespoke-software">
+                    <span class="services-avatar services-avatar__bespoke-software"><span class="icon__services--bespoke-software"></span> </span>
+                    <span class="heading">Bespoke Software</span>
+                    <span class="paragraph">Bespoke software solutions for all your business needs including integrations and reporting.</span>
+                    <span class="button-container"><span class="services-button services-button__bespoke-software"> Read More </span> </span>
+                  </a>
+                </div>
+              </div>
+              <!-- End of services-row div -->
+            </div>
+            <!-- End of services-section div -->
+          </div>
+          <!-- End of extra-div div -->
+        </div>
+        <!-- End of services-container div -->
+        <div class="partners-section"></div>
+        <!-- End of partners-section div -->
+        <div class="brand-section"></div>
+        <!-- End of brand-section div -->
+      </div>
+      <!-- End of middle container div -->
     </div>
+    <!-- End of id container div -->
   </body>
 </html>
