added the rest of the service panels html and colour schemed them

--- a/index.html
+++ b/index.html
@@ -404,6 +404,61 @@
                     <span class="button-container"><span class="services-button services-button__bespoke-software"> Read More </span> </span>
                   </a>
                 </div>
+                <!-- End of flex__services for Bespoke Software -->
+                <div class="flex flex__services">
+                  <a href="https://www.netmatters.co.uk/it-support" class="services-panel services-panel__it-support">
+                    <span class="services-avatar services-avatar__it-support"><span class="icon__services--it-support"></span> </span>
+                    <span class="heading">IT Support</span>
+                    <span class="paragraph">Fully managed IT support and consultancy packages tailored to meet your exact business needs. </span>
+                    <span class="button-container"><span class="services-button services-button__it-support"> Read More </span> </span>
+                  </a>
+                </div>
+                <!-- End of flex__services for IT Support -->
+                <div class="flex flex__services">
+                  <a href="https://www.netmatters.co.uk/digital-marketing" class="services-panel services-panel__digital-marketing">
+                    <span class="services-avatar services-avatar__digital-marketing"><span class="icon__services--digital-marketing"></span> </span>
+                    <span class="heading">Digital Marketing</span>
+                    <span class="paragraph">Driven brand awareness & ROI through creative digital marketing campaigns.</span>
+                    <span class="button-container"><span class="services-button services-button__digital-marketing"> Read More </span> </span>
+                  </a>
+                </div>
+                <!-- End of flex__services for Digital Marketing -->
+                <div class="flex flex__services">
+                  <a href="https://www.netmatters.co.uk/telecoms-services" class="services-panel services-panel__telecoms-services">
+                    <span class="services-avatar services-avatar__telecoms-services"><span class="icon__services--telecoms-services"></span> </span>
+                    <span class="heading">Telecoms Services</span>
+                    <span class="paragraph">Business telephony solutions including mobile & connectivity solutions.</span>
+                    <span class="button-container"><span class="services-button services-button__telecoms-services"> Read More </span> </span>
+                  </a>
+                </div>
+                <!-- End of flex__services for Telecoms Services -->
+                <div class="flex flex__services">
+                  <a href="https://www.netmatters.co.uk/web-design" class="services-panel services-panel__web-design">
+                    <span class="services-avatar services-avatar__web-design"><span class="icon__services--web-design"></span> </span>
+                    <span class="heading">Web Design</span>
+                    <span class="paragraph">User-centric design for businesses looking to make a lasting impression.</span>
+                    <span class="button-container"><span class="services-button services-button__web-design"> Read More </span> </span>
+                  </a>
+                </div>
+                <!-- End of flex__services for Web Design -->
+                <div class="flex flex__services">
+                  <a href="https://www.netmatters.co.uk/cyber-security" class="services-panel services-panel__cyber-security">
+                    <span class="services-avatar services-avatar__cyber-security"><span class="icon__services--cyber-security"></span> </span>
+                    <span class="heading">Cyber Security</span>
+                    <span class="paragraph">Prevention, testing, consultancy & breach management services.</span>
+                    <span class="button-container"><span class="services-button services-button__cyber-security"> Read More </span> </span>
+                  </a>
+                </div>
+                <!-- End of flex__services for Cyber Security -->
+                <div class="flex flex__services">
+                  <a href="https://www.netmatters.co.uk/scs-web-developer-course" class="services-panel services-panel__developer-training">
+                    <span class="services-avatar services-avatar__developer-training"><span class="icon__services--developer-training"></span> </span>
+                    <span class="heading">Developer Training</span>
+                    <span class="paragraph">Web design & software training courses designed to secure a job in tech.</span>
+                    <span class="button-container"><span class="services-button services-button__developer-training"> Read More </span> </span>
+                  </a>
+                </div>
+                <!-- End of flex__services for Developer Training -->
               </div>
               <!-- End of services-row div -->
             </div>
