finished services heading and media query for it, applied container width and learn to stretch the navbar and img beyond the container, my services is pretty close except on xsmall, the width of the boxes, but will leave for now, as it still looks good, and I need to move onto the next section.

--- a/index.html
+++ b/index.html
@@ -395,7 +395,11 @@
           <div id="extra-div">
             <div id="services-section">
               <div id="services-row">
-                <div id="services-h2"></div>
+                <div id="services-heading" class="flex">
+                  <span>Our Services</span>
+                  <span><a href="https://www.netmatters.co.uk/case-studies">View Our Work&nbsp;<span class="icon__services--view-our-work"></a></span></span>
+                </div>
+                <!-- End of services-heading div -->
                 <div class="grid">
                   <div class="flex flex__services grid__services--bespoke-software">
                     <a href="https://www.netmatters.co.uk/bespoke-software" class="services-panel services-panel__bespoke-software">
