had to go back to services to add a view our work to the bottom of it in mobile view, and did some ruler measuring to get the look right, the partners section was quite quick and simple for now, I'm gonna move onto the brand section

--- a/index.html
+++ b/index.html
@@ -464,6 +464,10 @@
                     </a>
                   </div>
                   <!-- End of flex__services for Developer Training -->
+                  <div id="xsmall-view-our-work" class="flex">
+                    <span><a href="https://www.netmatters.co.uk/case-studies">View Our Work&nbsp;<span class="icon__services--xsmall-view-our-work"></a></span></span>
+                  </div>
+                  <!-- Xsmall View Our Work -->
                 </div>
                 <!-- End of services-grid div -->
               </div>
@@ -477,9 +481,9 @@
         <div class="partners-section">
 
           
-            <div>
+            <div class="flex">
               <div>
-                <div>
+                <div class="partners-slide-item">
                   <picture>
                     <source srcset="/assets/images/6.partners/PPC_logo.webp" type="image/webp">
                     <source srcset="/assets/images/6.partners/PPC_logo.jpg" type="image/jpg">
@@ -488,7 +492,7 @@
                 </div>
               </div>
               <div>
-                <div>
+                <div class="partners-slide-item">
                   <picture>
                     <source srcset="/assets/images/6.partners/princess-royal-training.png" type="image/jpg">
                     <img src="/assets/images/6.partners/princess-royal-training.png" alt="Princess Royal Training">
@@ -496,7 +500,7 @@
                 </div>
               </div>
               <div>
-                <div>
+                <div class="partners-slide-item">
                   <picture>
                     <source srcset="/assets/images/6.partners/qms.webp" type="image/webp">
                     <source srcset="/assets/images/6.partners/qms.png" type="image/jpg">
@@ -505,7 +509,7 @@
                 </div>
               </div>
               <div>
-                <div>
+                <div class="partners-slide-item">
                   <picture>
                     <source srcset="/assets/images/6.partners/iso_27001.png" type="image/jpg">
                     <img src="/assets/images/6.partners/iso_27001.png" alt="ISO 27001">
@@ -513,7 +517,7 @@
                 </div>
               </div>
               <div>
-                <div>
+                <div class="partners-slide-item">
                   <picture>
                     <source srcset="/assets/images/6.partners/skills-of-tomorrow.jpg" type="image/jpg">
                     <img src="/assets/images/6.partners/skills-of-tomorrow.jpg" alt="Skills Of tomorrow">
@@ -521,7 +525,7 @@
                 </div>
               </div>
               <div>
-                <div>
+                <div class="partners-slide-item">
                   <picture>
                     <source srcset="assets/images/6.partners/cyber-essentials-colour.jpg" type="image/png">
                     <img src="assets/images/6.partners/cyber-essentials-colour.jpg" alt="Cyber Essentials">
@@ -529,7 +533,7 @@
                 </div>
               </div>
               <div>
-                <div>
+                <div class="partners-slide-item">
                   <picture>
                     <source srcset="/assets/images/6.partners/google-partner.webp" type="image/webp">
                     <source srcset="/assets/images/6.partners/google-partner.jpg" type="image/jpg">
@@ -538,7 +542,7 @@
                 </div>
               </div>
               <div>
-                <div>
+                <div class="partners-slide-item">
                   <picture>
                     <source srcset="/assets/images/6.partners/living_wage.png" type="image/png">
                     <img src="/assets/images/6.partners/living_wage.png" alt="Living Wage">
@@ -546,7 +550,7 @@
                 </div>
               </div>
               <div>
-                <div>
+                <div class="partners-slide-item">
                   <picture>
                     <source srcset="/assets/images/6.partners/norfolk_prohelp.png" type="image/png">
                     <img src="/assets/images/6.partners/norfolk_prohelp.png" alt="Norfolk Prohelp logo">
@@ -554,7 +558,7 @@
                 </div>
               </div>
               <div>
-                <div>
+                <div class="partners-slide-item">
                   <picture>
                     <source srcset="/assets/images/6.partners/investing-in-future-growth.jpg" type="image/jpg">
                     <img src="/assets/images/6.partners/investing-in-future-growth.jpg" alt="Investing In Future Growth">
